2026-02-08  Araki Ken  <arakiken@users.sf.net>

	* vterm.c:
	  - Check if a member of VTermScreenCallbacks is NULL.
	  - Fix type cast error in vterm_state_get_cursorpos().
	  - Add vterm_color_is_equal() and vterm_state_set_selection_callbacks().

	* bl_str.c: bl_str_unescape() supports 0XX (octal digits).

2026-01-25  Araki Ken  <arakiken@users.sf.net>

	* tool/mlimgloader/Makefile.in:
	  Add LIBS2_quartz_gdk-pixbuf and LIBS2_quartz_libpng.

	* configure.in: Add X_CFLAGS to X_CFLAGS_AUX before X_CFLAGS="" for
	  mlimagloader to be build with xlib in quartz.
	  (mlimgloader is not build in quartz, but if multiple values including
	   "quartz" is specified to --with-gui option, mlimgloader is build
	   by gui_for_tool="xlib".)
	  (https://github.com/arakiken/mlterm/issues/157)

2025-12-31  Araki Ken  <arakiken@users.sf.net>

	* xlib/ui_connect_dialog.c: Fix how elapsed time is calculated with
	  gettimeofday().

2025-12-31  Araki Ken  <arakiken@users.sf.net>

	* ci.yml: macos-13 -> macos-14

	* xlib/ui_connect_dialog.c: The event loop is not terminated until 1
	  sec has elapsed.

	* c_pixel.c: Fix illegal memory access in TEST_sixel_realloc_pixels().

	* vt_parser.c: Fix parsing iso2022 in parse_vt100_escape_sequence().

2025-12-30  Araki Ken  <arakiken@users.sf.net>

	* vt_parser.h: Reorder the members of vt_parser_t.

2025-12-30  Araki Ken  <arakiken@users.sf.net>

	* drcssixel-v3.c, test-v3, DRCS-SIXEL-v3: Add.

	* vt_line.h, vt_ot_layout.h, vt_parser.h: int -> u_int

	* vt_parser.c:
	  - Add DECSET 8801.
	  - define_drcs_picture() supports DRCSMMv3.

	* vt_drcs.[ch]:
	  - Add vt_drcs_set_version().
	  - Support DRCSMMv3.

	* vt_str_parser.c: next_char() supports DRCSMMv3.

	* vt_char_encoding.c: Use CS_INTERMEDIATE2() and CS_ADD_INTERMEDIATE2()
	  in *_illegal_char().

	* encodefilter/src/test.c: Add "\x1b( /@a" to test.

	* ef_iso2022_parser.c:
	  'int intermed' -> 'int intermed1, int intermed2' in get_charset().
