@@ -1,5 +1,10 @@
 2026-02-08  Araki Ken  <arakiken@users.sf.net>
 
+	* vterm.c: Enclose vterm_state_set_selection_callbacks() by
+	  VERSION_CHECK_VERSION2(0, 2).
+
+2026-02-08  Araki Ken  <arakiken@users.sf.net>
+
 	* vterm.c:
 	  - Check if a member of VTermScreenCallbacks is NULL.
 	  - Fix type cast error in vterm_state_get_cursorpos().
